feat: add authentication with clerk

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:tgD4jZx2CmVs@ep-snowy-sun-a5d5spzj.us-east-2.aws.neon.tech/neondb?sslmode=require"
+#clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VyZS1lbGVwaGFudC00LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_yogQvtLhPiXlRofvr6kyGe1L1kuVBfJ0EiETMwtr6p
