--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
@@ -25,7 +24,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "prisma": "^5.21.1",
